# Appointment-Api

./: .gitignore  Cargo.toml
.cargo/: config.toml
logs/: api.log.2025-08-26
src/: app.rs  lib.rs  main.rs  telemetry.rs
src/api/: catchers.rs  mod.rs
src/api/domain/: appointment.rs
src/api/dto/: appointment_request.rs  appointment_response.rs  mod.rs
src/api/error/: api_error.rs
src/api/infra/: mod.rs
src/api/infra/db/: mod.rs  surreal_client.rs
src/api/infra/surreal/: appointment_repo.rs  mod.rs
src/api/repository/: appointment_repo.rs  mod.rs
src/api/routes/: appointment_routes.rs  health_check.rs  mod.rs
src/api/service/: appointment_service.rs  mod.rs
