[package]
name = "schedule_api"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde", "clock"] }
config = "0.15.14"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
surrealdb = "2.3.7"
thiserror = "2.0.16"
validator = { version = "0.20.0", features = ["derive"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
dotenv = "0.15.0"
tracing-log = "0.2.0"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
